--- a/index.html
+++ b/index.html
@@ -20,38 +20,119 @@
 
       <div class="row">
         <div class="col-lg-3 col-sm-6">
-          <div class="box">
-            <div class="list-group">
-              <a class="list-group-item" href="#"
-                ><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>&nbsp;
-                Home</a
-              >
-              <a class="list-group-item" href="#"
-                ><i class="fa fa-cubes fa-fw fa-lg" aria-hidden="true"></i
-                >&nbsp; Projects</a
-              >
-              <a class="list-group-item" href="#"
-                ><i class="fa fa-users fa-fw fa-lg" aria-hidden="true"></i
-                >&nbsp; Events</a
-              >
-              <a class="list-group-item" href="#"
-                ><i class="fa fa-book fa-fw fa-lg" aria-hidden="true"></i>&nbsp;
-                All topics</a
+          <div class="box ">
+            <div class="list-group topics">
+              <a href="#"
+                ><button type="button" class="list-group-item" id="all-topics">
+                  <i class="fa fa-book fa-fw fa-lg" aria-hidden="true"></i> All
+                  topics
+                </button></a
               >
             </div>
-          </div>
 
-          <div class="box topics">
-            <h3>Trending topics</h3>
-            <div class="list-group">
-              <a class="list-group-item" href="#"
-                >Item 1 <span class="label label-primary">Follow</span>
-              </a>
-              <a class="list-group-item" href="#"
-                >Item 2 <span class="label label-primary">Follow</span></a
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  air-quality
+                </button></a
               >
-              <a class="list-group-item" href="#"
-                >Item 3 <span class="label label-primary">Follow</span></a
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  agriculture
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  arduino
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  balloon-mapping
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">lead</button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">legal</button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  microplastics
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">mining</button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">noise</button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">oil</button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  particulate matter
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  sensors
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  user interface "ui"
+                </button></a
+              >
+            </div>
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">waste</button></a
+              >
+            </div>
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  water-quality
+                </button></a
               >
             </div>
           </div>
@@ -60,19 +141,46 @@
         <!--end of column 1-->
 
         <!--end of column 2-->
+
         <div class="col-lg-6 col-sm-12">
+          <div class="box blog">
+            <a
+              href="https://publiclab.org/notes/cess/12-09-2018/outreachy-2018-week-one"
+            >
+              <img
+                src="/img/blogExample.jpg"
+                class="img-responsive"
+                alt="Outreachy blog post image"
+              />
+              <p>
+                <span class="label label-primary">Latest Blog:</span> Outreachy
+                2018: Week One
+              </p>
+            </a>
+          </div>
+
           <div class="box center-block write">
-            <h4>
+            <h3 class="write-input">
               <i class="fa fa-pencil fa-lg" aria-hidden="true"></i> Ask a
               question or write a research note
-            </h4>
+            </h3>
             <button type="button" class="btn btn-primary btn-xs submit">
               Submit
             </button>
           </div>
 
           <div class="box center-block">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <p>
+              <a class="activity-label" href="#">air quality</a>
+              <a class="x-button" href="#"
+                ><span class="close-activity">X</span></a
+              >
+            </p>
+            <a href="#"
+              ><h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </h3></a
+            >
             <p>
               Sit, qui velit unde nostrum nisi aut saepe optio dignissimos
               commodi cumque est reiciendis odit deleniti corporis mollitia
@@ -92,7 +200,17 @@
           </div>
 
           <div class="box center-block">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <p>
+              <a class="activity-label" href="#">balloon-mapping</a>
+              <a class="x-button" href="#"
+                ><span class="close-activity">X</span></a
+              >
+            </p>
+            <a href="#"
+              ><h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </h3></a
+            >
             <p>
               Sit, qui velit unde nostrum nisi aut saepe optio dignissimos
               commodi cumque est reiciendis odit deleniti corporis mollitia
@@ -111,7 +229,17 @@
             </div>
           </div>
           <div class="box center-block">
-            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+            <p>
+              <a class="activity-label" href="#">water-quality</a>
+              <a class="x-button" href="#"
+                ><span class="close-activity">X</span></a
+              >
+            </p>
+            <a href="#"
+              ><h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              </h3></a
+            >
             <p>
               Sit, qui velit unde nostrum nisi aut saepe optio dignissimos
               commodi cumque est reiciendis odit deleniti corporis mollitia
@@ -150,22 +278,27 @@
             <div>
               <a href="#">My comments <span class="badge">0</span></a>
             </div>
-
-            <div class="btn-group btn-group-sm" role="group" aria-label="...">
-              <button type="button" class="btn btn-primary">air-quality</button>
-              <button type="button" class="btn btn-primary">waste</button>
-              <button type="button" class="btn btn-primary">
-                water-quality
-              </button>
-              <button type="button" class="btn btn-primary">
-                balloon-mapping
-              </button>
-              <button type="button" class="btn btn-primary">DIY</button>
-            </div>
           </div>
           <div class="box ">
             <h4>Find projects and people in your area:</h4>
-            <div class="project-map"></div>
+            <div class="project-map">
+              <img class="img-responsive" src="img/googlemap.png" />
+            </div>
+          </div>
+
+          <div class="box latest-projects">
+            <h3>Latest Projects</h3>
+            <div class="list-group">
+              <a class="list-group-item" href="#"
+                >Item 1 <span class="label label-primary">Follow</span>
+              </a>
+              <a class="list-group-item" href="#"
+                >Item 2 <span class="label label-primary">Follow</span></a
+              >
+              <a class="list-group-item" href="#"
+                >Item 3 <span class="label label-primary">Follow</span></a
+              >
+            </div>
           </div>
         </div>
         <!--end of column 3-->
