changed the blog image path

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               href="https://publiclab.org/notes/cess/12-09-2018/outreachy-2018-week-one"
             >
               <img
-                src="/img/blogExample.jpg"
+                src="img/blogExample.jpg"
                 class="img-responsive"
                 alt="Outreachy blog post image"
               />
