questions page design added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="alert alert-info" id="dashboard" role="alert">
+        Dashboard design
+      </div>
       <!--column 1-->
 
       <div class="row">
@@ -298,6 +301,251 @@
               <a class="list-group-item" href="#"
                 >Item 3 <span class="label label-primary">Follow</span></a
               >
+            </div>
+          </div>
+        </div>
+        <!--end of column 3-->
+      </div>
+      <div class="alert alert-info" id="questions" role="alert">
+        Questions design
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-sm-6">
+          <div class="box ">
+            <div class="list-group topics">
+              <a href="#"
+                ><button type="button" class="list-group-item" id="all-topics">
+                  <strong>Questions</strong>
+                </button></a
+              >
+            </div>
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item active">
+                  My questions
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  Recently asked
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  Recenly answered
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  Popular
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  Unanswered
+                </button></a
+              >
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">Liked</button></a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!--end of column 1-->
+
+        <!--end of column 2-->
+
+        <div class="col-lg-6 col-sm-12">
+          <div class="box center-block">
+            <div class="input-group">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search for..."
+              />
+              <span class="input-group-btn">
+                <button class="btn btn-primary" type="button">
+                  Add Question
+                </button>
+              </span>
+            </div>
+          </div>
+
+          <div class="box center-block">
+            <p>
+              <a class="activity-label" href="#">image-processing</a>
+              <a class="activity-label" href="#">DIY</a>
+              <a class="activity-label" href="#">biology</a>
+              <a class="x-button" href="#"
+                ><span class="close-activity">X</span></a
+              >
+            </p>
+            <a href="#"><h3>Where can I find the instructions?</h3></a>
+            <div class="btn-group" role="group" aria-label="...">
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-pencil" aria-hidden="true"></i> Answer
+              </button>
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-times" aria-hidden="true"></i> Hide
+              </button>
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-rss" aria-hidden="true"></i> Follow
+              </button>
+            </div>
+            <br />
+            <div class="btn-group stats">
+              <button type="button" class="btn btn-default btn-sm">
+                Comments
+              </button>
+              <button type="button" class="btn btn-default btn-sm">
+                Views
+              </button>
+              <button type="button" class="btn btn-default btn-sm">
+                Stars
+              </button>
+            </div>
+          </div>
+
+          <div class="box center-block">
+            <p>
+              <a class="activity-label" href="#">image-processing</a>
+              <a class="activity-label" href="#">DIY</a>
+              <a class="activity-label" href="#">biology</a>
+              <a class="x-button" href="#"
+                ><span class="close-activity">X</span></a
+              >
+            </p>
+            <a href="#"><h3>Where can I find the instructions?</h3></a>
+            <div class="btn-group" role="group" aria-label="...">
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-pencil" aria-hidden="true"></i> Answer
+              </button>
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-times" aria-hidden="true"></i> Hide
+              </button>
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-rss" aria-hidden="true"></i> Follow
+              </button>
+            </div>
+            <br />
+            <div class="btn-group stats">
+              <button type="button" class="btn btn-default btn-sm">
+                Comments
+              </button>
+              <button type="button" class="btn btn-default btn-sm">
+                Views
+              </button>
+              <button type="button" class="btn btn-default btn-sm">
+                Stars
+              </button>
+            </div>
+          </div>
+
+          <div class="box center-block">
+            <p>
+              <a class="activity-label" href="#">image-processing</a>
+              <a class="activity-label" href="#">DIY</a>
+              <a class="activity-label" href="#">biology</a>
+              <a class="x-button" href="#"
+                ><span class="close-activity">X</span></a
+              >
+            </p>
+            <a href="#"><h3>Where can I find the instructions?</h3></a>
+            <div class="btn-group" role="group" aria-label="...">
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-pencil" aria-hidden="true"></i> Answer
+              </button>
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-times" aria-hidden="true"></i> Hide
+              </button>
+              <button type="button" class="btn btn-link btn-sm q-action">
+                <i class="fa fa-rss" aria-hidden="true"></i> Follow
+              </button>
+            </div>
+            <br />
+            <div class="btn-group stats">
+              <button type="button" class="btn btn-default btn-sm">
+                Comments
+              </button>
+              <button type="button" class="btn btn-default btn-sm">
+                Views
+              </button>
+              <button type="button" class="btn btn-default btn-sm">
+                Stars
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--end of column 2-->
+
+        <!--end of column 3-->
+        <div class="col-lg-3 col-sm-6">
+          <div class="box latest-projects">
+            <h3>Recommended topics</h3>
+            <div class="list-group">
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">air-quality</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">agriculture</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">balloon-mapping</span>
+              </a>
+
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">legal</span>
+              </a>
+
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">microplastics</span>
+              </a>
+
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">mining</span>
+              </a>
+
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">noise</span>
+              </a>
+
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">oil-and-gas</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">particulate matter</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">sensors</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">stormwater</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">timelapse</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">waste</span>
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="label label-primary">water-quality</span>
+              </a>
             </div>
           </div>
         </div>
