implementing Jeff's suggestions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div>
               <a href="#">
                 <button type="button" class="list-group-item">
-                  air-quality
+                  air-quality (12)
                 </button></a
               >
             </div>
@@ -44,7 +44,23 @@
             <div>
               <a href="#">
                 <button type="button" class="list-group-item">
-                  agriculture
+                  agriculture (2)
+                  <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  arduino (1)
+                  <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  balloon-mapping (9)
                 </button></a
               >
             </div>
@@ -52,7 +68,59 @@
             <div>
               <a href="#">
                 <button type="button" class="list-group-item">
-                  arduino
+                  lead (2) <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  legal (0) <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  microplastics (7)
+                  <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  mining (1)
+                  <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  noise (2) <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  oil (2) <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  particulate matter (0)
+                  <i class="fa fa-rss" aria-hidden="true"></i></button
+              ></a>
+            </div>
+
+            <div>
+              <a href="#">
+                <button type="button" class="list-group-item">
+                  sensors (8)
                 </button></a
               >
             </div>
@@ -60,81 +128,21 @@
             <div>
               <a href="#">
                 <button type="button" class="list-group-item">
-                  balloon-mapping
-                </button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">lead</button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">legal</button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">
-                  microplastics
-                </button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">mining</button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">noise</button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">oil</button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">
-                  particulate matter
-                </button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">
-                  sensors
-                </button></a
-              >
-            </div>
-
-            <div>
-              <a href="#">
-                <button type="button" class="list-group-item">
-                  user interface "ui"
+                  user interface "ui" (3)
                 </button></a
               >
             </div>
             <div>
               <a href="#">
-                <button type="button" class="list-group-item">waste</button></a
+                <button type="button" class="list-group-item">
+                  waste (5)
+                </button></a
               >
             </div>
             <div>
               <a href="#">
                 <button type="button" class="list-group-item">
-                  water-quality
+                  water-quality (8)
                 </button></a
               >
             </div>
@@ -146,6 +154,16 @@
         <!--end of column 2-->
 
         <div class="col-lg-6 col-sm-12">
+          <div class="box center-block write">
+            <h3 class="write-input">
+              <i class="fa fa-pencil fa-lg" aria-hidden="true"></i> Ask a
+              question or write a research note
+            </h3>
+            <button type="button" class="btn btn-primary btn-xs submit">
+              Publish
+            </button>
+          </div>
+
           <div class="box blog">
             <a
               href="https://publiclab.org/notes/cess/12-09-2018/outreachy-2018-week-one"
@@ -160,16 +178,6 @@
                 2018: Week One
               </p>
             </a>
-          </div>
-
-          <div class="box center-block write">
-            <h3 class="write-input">
-              <i class="fa fa-pencil fa-lg" aria-hidden="true"></i> Ask a
-              question or write a research note
-            </h3>
-            <button type="button" class="btn btn-primary btn-xs submit">
-              Submit
-            </button>
           </div>
 
           <div class="box center-block">
