--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               question or write a research note
             </h3>
             <button type="button" class="btn btn-primary btn-xs submit">
-              Publish
+              Add New
             </button>
           </div>
 
